--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,7 +88,7 @@
             <li>Punti ferita: ${responseData.punti_ferita}</li>
             <li>Monete d'oro: ${responseData.monete_oro}</li>
             <li>Monete d'argento: ${responseData.monete_argento}</li>
-            <li>Monete di rame: ${responseData.monente_rame}</li>
+            <li>Monete di rame: ${responseData.monete_rame}</li>
             <li>Oggetti: ${JSON.stringify(responseData.oggetti)}</li>
             </ul>
             `
